# fieldrouter

./: pyproject.toml
examples/: before_field_validator.py  identity.py  nested.py  reference.py  simple.py
examples/generic/: identity.py  nested.py  reference.py  simple.py
src/fieldrouter/: generic.py  main.py
tests/: failure_test.py  main_examples_test.py
