[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[dependency-groups]
dev = [
  "pre-commit>=4.1.0"
]
test = [
  "pytest>=9.0.3"
]

[project]
name = "fieldrouter"
version = "1.0.4"
description = "Data model validation for nested data routes"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
dependencies = [
  "pydantic>=2.12"
]
requires-python = ">=3.10"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/lmmx/fieldrouter"
Repository = "https://github.com/lmmx/fieldrouter.git"

[tool.uv]
default-groups = "all"
